--- a/Junior/sunnyside-agency-landing-page-main/sass/components/_features.scss
+++ b/Junior/sunnyside-agency-landing-page-main/sass/components/_features.scss
@@ -8,6 +8,11 @@
          grid-row: 1 / 2;
          grid-column: 2 / 3;
       }
+
+      :nth-child(2),
+      :nth-child(4) {
+         align-items: start;
+      }
    }
 
    &__img {
@@ -27,6 +32,8 @@
          flex-direction: column;
          justify-content: center;
          align-items: center;
+         text-align: left;
+         padding: 6rem 3.5rem;
       }
 
       p {
